cleaning of frontend package
- replacing new Integer with Integer.toValue
- suppress warnings for raw type and unused variables
- the width of the field in the scenario selection tab were changed
- some streamers are closed